dz4/err.txt
sstream.cpp: In function ‘int main()’:
sstream.cpp:14:5: error: ‘cout’ was not declared in this scope; did you mean ‘std::cout’?
   14 |     cout << lat << ", " << lon << endl;
      |     ^~~~
      |     std::cout
In file included from sstream.cpp:3:
/usr/include/c++/11/iostream:61:18: note: ‘std::cout’ declared here
   61 |   extern ostream cout;          /// Linked to standard output
      |                  ^~~~
sstream.cpp:14:35: error: ‘endl’ was not declared in this scope; did you mean ‘std::endl’?
   14 |     cout << lat << ", " << lon << endl;
      |                                   ^~~~
      |                                   std::endl
In file included from /usr/include/c++/11/istream:39,
                 from /usr/include/c++/11/sstream:38,
                 from sstream.cpp:2:
/usr/include/c++/11/ostream:684:5: note: ‘std::endl’ declared here
  684 |     endl(basic_ostream<_CharT, _Traits>& __os)
      |     ^~~~
